--- a/PRG/RetoFinal/src/view/MenuWindow.fxml
+++ b/PRG/RetoFinal/src/view/MenuWindow.fxml
@@ -24,7 +24,7 @@
                 <Font size="16.0" />
             </font>
         </Button>
-        <Button fx:id="Button_LogOut" layoutX="403.0" layoutY="14.0" mnemonicParsing="false" onAction="#cerrarVentana" style="-fx-background-color: #f33f3f; -fx-border-color: #000000; -fx-font-weight: bold;" text="Log Out">
+        <Button id="Button_LogOut" fx:id="Button_LogOut" layoutX="403.0" layoutY="14.0" mnemonicParsing="false" onAction="#cerrarVentana" style="-fx-background-color: #f33f3f; -fx-border-color: #000000; -fx-font-weight: bold;" text="Log Out">
             <font>
                 <Font size="13.0" />
             </font>
