--- a/PRG/RetoFinal/src/view/ReviewWindow.fxml
+++ b/PRG/RetoFinal/src/view/ReviewWindow.fxml
@@ -54,9 +54,9 @@
         <Label fx:id="labelContadorCaracteres" layoutX="50.0" layoutY="320.0" prefHeight="20.0" prefWidth="300.0" style="-fx-text-fill: #666666;" text="0/500 caracteres" />
         
         <!-- Botones -->
-        <Button fx:id="buttonEnviar" layoutX="100.0" layoutY="377.0" mnemonicParsing="false" onAction="#enviarReview" prefHeight="35.0" prefWidth="100.0" style="-fx-background-color: #4CAF50; -fx-text-fill: white; -fx-border-color: #388E3C; -fx-font-size: 14px;" text="Enviar" />
+        <Button id="buttonEnviar" fx:id="buttonEnviar" layoutX="100.0" layoutY="377.0" mnemonicParsing="false" onAction="#enviarReview" prefHeight="35.0" prefWidth="100.0" style="-fx-background-color: #4CAF50; -fx-text-fill: white; -fx-border-color: #388E3C; -fx-font-size: 14px;" text="Enviar" />
         
-        <Button fx:id="buttonCancelar" layoutX="214.0" layoutY="377.0" mnemonicParsing="false" onAction="#cancelar" prefHeight="35.0" prefWidth="100.0" style="-fx-background-color: #F44336; -fx-text-fill: white; -fx-border-color: #D32F2F; -fx-font-size: 14px;" text="Cancelar" />
+        <Button id="buttonCancelar" fx:id="buttonCancelar" layoutX="214.0" layoutY="377.0" mnemonicParsing="false" onAction="#cancelar" prefHeight="35.0" prefWidth="100.0" style="-fx-background-color: #F44336; -fx-text-fill: white; -fx-border-color: #D32F2F; -fx-font-size: 14px;" text="Cancelar" />
         
         <!-- Información del videojuego (opcional, puedes personalizar) -->
         <Label fx:id="labelVideojuego" layoutX="50.0" layoutY="50.0" prefHeight="20.0" prefWidth="300.0" text="Videojuego: " />
