Cambiado el menu de help Por los pdfs, actualizado el test de shopWindow para añadir el clickDerecho

--- a/PRG/RetoFinal/src/view/StoreWindow.fxml
+++ b/PRG/RetoFinal/src/view/StoreWindow.fxml
@@ -25,7 +25,8 @@
             <menus>
                 <Menu fx:id="menuHelp" mnemonicParsing="false" text="Help">
                     <items>
-                        <MenuItem fx:id="menuHelpWindow" mnemonicParsing="false" onAction="#helpWindow" text="Help Window" />
+                        <MenuItem fx:id="menuHelpManual" mnemonicParsing="false" onAction="#manualPdf" text="Manuals" />
+                  <MenuItem fx:id="menuHelpReport" mnemonicParsing="false" onAction="#reportPdf" text="Report" />
                     </items>
                 </Menu>
             <Menu fx:id="menuWindow" mnemonicParsing="false" text="Windows">
