--- a/PRG/RetoFinal/src/view/StoreAdminWindow.fxml
+++ b/PRG/RetoFinal/src/view/StoreAdminWindow.fxml
@@ -6,6 +6,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.ContextMenu?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
@@ -64,10 +65,10 @@
         <TextField fx:id="textFieldSearch" layoutX="116.0" layoutY="475.0" prefHeight="25.0" prefWidth="200.0" promptText="Game name..." />
       
         <Label layoutX="320.0" layoutY="480.0" prefHeight="17.0" prefWidth="60.0" text="Genre:" />
-        <TextField fx:id="textFieldGenre" layoutX="380.0" layoutY="475.0" prefHeight="25.0" prefWidth="120.0" promptText="All" />
+        <ComboBox fx:id="comboBoxGenre" layoutX="380.0" layoutY="475.0" prefHeight="25.0" prefWidth="120.0" promptText="All" />
       
         <Label layoutX="510.0" layoutY="480.0" prefHeight="17.0" prefWidth="80.0" text="Platform:" />
-        <TextField fx:id="textFieldPlatform" layoutX="590.0" layoutY="475.0" prefHeight="25.0" prefWidth="120.0" promptText="All" />
+        <ComboBox fx:id="comboBoxPlatform" layoutX="590.0" layoutY="475.0" prefHeight="25.0" prefWidth="120.0" promptText="All" />
       
         <Button fx:id="buttonSearch" layoutX="720.0" layoutY="475.0" mnemonicParsing="false" onAction="#search" prefHeight="25.0" prefWidth="80.0" style="-fx-background-color: A7C4E5; -fx-border-color: #000000;" text="Search" />
       
